apps/base/media/notifiarr/notifiarr-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: notifiarr-ingressroute
  namespace: media
  annotations:
    gethomepage.dev/href: "https://notifiarr.lab.mainertoo.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Notifiarr"
    gethomepage.dev/description: "Notification and automation integration for media servers"
    gethomepage.dev/app: notifiarr
    gethomepage.dev/group: "Media"
    gethomepage.dev/icon: "https://cdn.jsdelivr.net/gh/selfhst/icons/svg/notifiarr.svg"
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`notifiarr.lab.mainertoo.com`)
      kind: Rule
      middlewares:
        - name: authentik-sso
          namespace: traefik-system
      services:
        - name: notifiarr
          port: 5454
  tls: {}
